# eat-pass

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  PLAN.md  README.md
.github/workflows/: ci.yml  demos.yml  deploy-pages.yml  release.yml
cli/: Cargo.toml
cli/src/: attester.rs  client.rs  demo.rs  issuer.rs  lib.rs  main.rs  origin.rs  policy.rs  redeemer.rs  store.rs  tls.rs  wire.rs
cli/tests/: e2e.rs
core/: Cargo.toml
core/fuzz/: Cargo.toml
core/fuzz/fuzz_targets/: parse_authorization.rs  token_from_bytes.rs
core/src/: authorize.rs  faest_sig.rs  gate.rs  lib.rs  pbrsa.rs  ratelimit.rs  serdehelp.rs  spend.rs  transparency.rs
core/tests/: fuzz_smoke.rs  roundtrip.rs
demos/: README.md  RESEARCH.md  test-all.sh
demos/fail-closed/: README.md  _simulate.sh  binding-or-bust.sh  policy_simulate.py  run-all.sh  test_policy_simulate.py  two-ghosts.sh  wrong-binary.sh
demos/fixtures/: claims-ghost-b.json  claims-good-build.json  claims-wrong-binding.json  claims-wrong-build.json  uqaz1-live-policy.json
demos/laptop-jury/: README.md  verify-live.sh
demos/mobile-coupled/: README.md
demos/tool-gate/: README.md  send-email-happy.sh  show-no-proof.sh
desktop/: README.md  generate-bindings.sh
desktop/docs/: desktop-coupled-protocol.md
desktop/sdk-macos/: Package.swift
desktop/sdk-macos/RustBridge/: README.md
desktop/sdk-macos/Sources/EatPassDesktop/: EatPassConfig.swift  EatPassDesktopClient.swift  HostAttestedGuest.swift  MacOsAppAttest.swift
desktop/sdk-python/: README.md  pyproject.toml
desktop/sdk-python/eatpass_desktop/: __init__.py  attestation.py  client.py  config.py  crypto.py  http.py  mint.py
desktop/sdk-python/eatpass_desktop/attestation/: __init__.py  bundle.py  tee.py  tpm.py
desktop/sdk-python/eatpass_desktop/linux/: __init__.py  tee.py  workload.py
desktop/sdk-python/eatpass_desktop/native/: .gitkeep
desktop/sdk-windows/EatPass.Desktop/: EatPass.Desktop.csproj  EatPassConfig.cs  EatPassDesktopClient.cs  EatPassNative.cs  TpmAttestation.cs
docs/: competitive.md  demos.html  desktop-client-attestation.md  index.html  linux-sdk.md  literature-pull-in.md  mobile-coupled-protocol.md  platform-support-matrix.md  platform-surface.md  platforms.html  post-quantum-roadmap.md  rats-glossary.md  verification-policy.md
gate/: Cargo.toml
gate/src/: lib.rs
mobile/: Cargo.toml  README.md  build-android-native.sh  generate-bindings.sh
mobile/bindings/kotlin/uniffi/eat_pass_mobile/: eat_pass_mobile.kt
mobile/bindings/swift/: eat_pass_mobile.swift  eat_pass_mobileFFI.h  eat_pass_mobileFFI.modulemap
mobile/sdk-android/: build.gradle.kts  settings.gradle.kts
mobile/sdk-android/demo/: build.gradle.kts
mobile/sdk-android/demo/src/main/: AndroidManifest.xml
mobile/sdk-android/demo/src/main/java/com/securebuild/eatpass/demo/: MainActivity.kt
mobile/sdk-android/demo/src/main/res/layout/: activity_main.xml
mobile/sdk-android/eatpass-mobile/: build.gradle.kts
mobile/sdk-android/eatpass-mobile/src/main/java/com/securebuild/eatpass/: AndroidKeyAttestation.kt  EatPassConfig.kt  EatPassMobileClient.kt
mobile/sdk-ios/: Package.swift
mobile/sdk-ios/RustBridge/: README.md
mobile/sdk-ios/Sources/EatPassMobile/: EatPassMobileClient.swift  IosAppAttest.swift
mobile/src/: lib.rs
policy/: Cargo.toml
policy/examples/: aws-nitro-uq-example.json  desktop-linux-tpm-example.json  desktop-macos-app-attest-example.json  mobile-android-example.json  mobile-ios-example.json  uqaz1-example.json
policy/src/: appraise.rs  diff.rs  gated.rs  lib.rs  schema.rs  sign.rs
pomfrit/: Cargo.toml
pomfrit/src/: lib.rs
scripts/: build-pomfrit-deps.sh  collect-desktop-tpm-windows.ps1  collect-desktop-tpm.sh  test-workspace-linux-docker.sh  verify-before-push.sh  verify-unified-quote-pin.sh
