[workspace]
resolver = "2"
members = ["core"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/maceip/eat-pass"
authors = ["maceip"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
thiserror = "2"
getrandom = "0.2"
