[workspace]
resolver = "2"
members = ["core", "cli", "gate"]
# The libFuzzer harness needs a nightly toolchain; keep it out of the default
# build and the CI matrix. Run on demand: `cargo +nightly fuzz run <target>`.
exclude = ["core/fuzz"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/maceip/eat-pass"
authors = ["maceip"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
thiserror = "2"
getrandom = "0.2"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
