[workspace]
resolver = "2"
members = ["core", "cli", "gate", "mobile", "policy", "pomfrit"]
# The libFuzzer harness needs a nightly toolchain; keep it out of the default
# build and the CI matrix. Run on demand: `cargo +nightly fuzz run <target>`.
exclude = [
  "core/fuzz",
  "third_party/pq_blind_signatures/blind-signatures",
  "third_party/pq_blind_signatures/mayo-c-sys",
  "third_party/pq_blind_signatures/vole-mayo-sys",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/maceip/eat-pass"
authors = ["maceip"]

# Local-dev patch: build against the sibling unified-quote checkout
# (../unified-quote/v2) instead of the published git tag, so changes to the core
# verifier and the gate/policy here are validated together. Bump the gate's git
# tag and drop this patch once the unified-quote changes are published.
[patch."https://github.com/maceip/unified-quote"]
unified-quote = { path = "../unified-quote/v2" }

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
thiserror = "2"
getrandom = "0.2"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
faest = "0.3"
signature = "2"
