[package]
name = "eat-pass-cli"
version = "0.1.0"
description = "eat-pass: attestation-gated, unlinkable authorization tokens — issuer, client, and origin in one binary"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "eat_pass_cli"
path = "src/lib.rs"

[[bin]]
name = "eat-pass"
path = "src/main.rs"

[dependencies]
eat-pass-core = { path = "../core" }
eat-pass-gate = { path = "../gate" }
blind-rsa-signatures = "0.17"
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }
redis = { version = "0.27", default-features = false, optional = true }
r2d2 = { version = "0.8", optional = true }

[features]
# Networked, durable shared state for multi-replica issuer/redeemer (m3). Off
# by default so the credential build stays pure-Rust and cross-platform; the
# `redis` CI job builds + tests with it against a service container.
redis = ["dep:redis", "dep:r2d2", "redis/r2d2", "redis/script"]
