[package]
name = "eat-pass-cli"
version = "0.1.0"
description = "eat-pass: attestation-gated, unlinkable authorization tokens — issuer, client, and origin in one binary"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "eat_pass_cli"
path = "src/lib.rs"

[[bin]]
name = "eat-pass"
path = "src/main.rs"

[dependencies]
eat-pass-core = { path = "../core" }
eat-pass-gate = { path = "../gate" }
blind-rsa-signatures = "0.17"
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }
redis = { version = "0.27", default-features = false, optional = true }
r2d2 = { version = "0.8", optional = true }
axum-server = { workspace = true }
ed25519-dalek = { workspace = true }

[features]
# Shipped by default: the production binary must be able to use the networked,
# durable shared-state backend for a multi-replica issuer/redeemer (m3). The
# redis dep is pure-Rust (default-features = false) so this stays cross-platform
# across every release target (linux/macOS/windows).
default = ["redis"]
redis = ["dep:redis", "dep:r2d2", "redis/r2d2", "redis/script"]
# Dev/test-only: compiles the in-process `demo` module + the e2e protocol test,
# which use the dev-sim attestation stand-ins. OFF by default and never in the
# shipped `eat-pass` binary — there is no insecure runtime path.
dev-sim = ["eat-pass-core/dev-sim"]
