[package]
name = "eat-pass-cli"
version = "0.1.0"
description = "eat-pass: attestation-gated, unlinkable authorization tokens — issuer, client, and origin in one binary"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "eat_pass_cli"
path = "src/lib.rs"

[[bin]]
name = "eat-pass"
path = "src/main.rs"

[dependencies]
eat-pass-core = { path = "../core" }
eat-pass-gate = { path = "../gate" }
eat-pass-policy = { path = "../policy" }
unified-quote = { git = "https://github.com/maceip/unified-quote", rev = "64b58c15b1f06b6c47008fa10a4e8b633085d764", default-features = false, features = ["desktop"] }
sha2 = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }
redis = { version = "0.27", default-features = false, optional = true }
r2d2 = { version = "0.8", optional = true }
axum-server = { workspace = true }

[features]
default = ["redis"]
redis = ["dep:redis", "dep:r2d2", "redis/r2d2", "redis/script"]
dev-sim = ["eat-pass-core/dev-sim"]
