[package]
name = "eat-pass-core"
version = "0.1.0"
description = "attestation-gated, unlinkable authorization tokens (blind-RSA, RFC 9474)"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "eat_pass_core"
path = "src/lib.rs"

[dependencies]
blind-rsa-signatures = "0.17"
ed25519-dalek = "2"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
getrandom = { workspace = true }
