[package]
name = "eat-pass-core"
version = "0.1.0"
description = "attestation-gated, unlinkable authorization tokens (blind-RSA, RFC 9474)"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "eat_pass_core"
path = "src/lib.rs"

[features]
# Dev/test-only attestation stand-ins (ed25519 `DevAttester`/`DevVerifier`).
# OFF by default and never compiled into shipped binaries: there is no runtime
# switch to gate issuance on anything but a real hardware attestation. Tests
# that exercise the protocol without a TEE enable this explicitly.
dev-sim = []

[dependencies]
blind-rsa-signatures = "0.17"
ed25519-dalek = "2"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
getrandom = { workspace = true }
