[package]
name = "eat-pass-core"
version = "0.1.0"
description = "attestation-gated, unlinkable authorization tokens (PoMFRIT + FAEST)"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "eat_pass_core"
path = "src/lib.rs"

[features]
default = ["pomfrit"]
pomfrit = ["dep:eat-pass-pomfrit"]
dev-sim = ["dep:ed25519-dalek"]

[dependencies]
eat-pass-pomfrit = { path = "../pomfrit", optional = true }
faest = { workspace = true }
ed25519-dalek = { version = "2", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
getrandom = { workspace = true }
rand_chacha = "0.10"
rand_core = "0.10"
