[package]
name = "eat-pass-gate"
version = "0.1.0"
description = "real attestation gate for eat-pass: verifies a unified-quote EAT and extracts the gated measurement"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "eat_pass_gate"
path = "src/lib.rs"

[dependencies]
eat-pass-core = { path = "../core", default-features = false }
# The portable unified-quote verifier. sev-snp covers the live Azure CVM node;
# tdx is cheap to include (no extra heavy deps) and covers Intel TDX / GCP once
# unblocked. nitro is intentionally left off here to keep the gate lean.
unified-quote = { git = "https://github.com/maceip/unified-quote", rev = "64b58c15b1f06b6c47008fa10a4e8b633085d764", default-features = false, features = ["mobile", "desktop", "sev-snp", "tdx"] }
hex = { workspace = true }
serde_json = { workspace = true }
