[package]
name = "eat-pass-gate"
version = "0.1.0"
description = "real attestation gate for eat-pass: verifies a unified-quote EAT and extracts the gated measurement"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "eat_pass_gate"
path = "src/lib.rs"

[dependencies]
eat-pass-core = { path = "../core", default-features = false }
# The portable unified-quote verifier used by the policy-backed gate.
unified-quote = { git = "https://github.com/maceip/unified-quote", rev = "fb4bb069528b1a5d586c10332693334e48e76a1c", default-features = false, features = ["mobile", "desktop", "sev-snp", "tdx", "nitro"] }
hex = { workspace = true }
serde_json = { workspace = true }
