[package]
name = "eat-pass-policy"
version = "0.1.0"
description = "Verification policy schema and appraisal for eat-pass (CoRIM/RFC 9711 shaped)"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
eat-pass-core = { path = "../core", default-features = false }
faest = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
unified-quote = { git = "https://github.com/maceip/unified-quote", rev = "fb4bb069528b1a5d586c10332693334e48e76a1c", default-features = false }

[dev-dependencies]
