[package]
name = "eat-pass-pomfrit"
version = "0.1.0"
description = "PoMFRIT blind signatures (MAYO1 + VOLE-in-the-head) for eat-pass"
edition = "2021"
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
blind-signatures = { path = "../third_party/pq_blind_signatures/blind-signatures" }
rand = "0.9"
thiserror = "2"
serde = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
