[package]
name = "eat-pass-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

# Detached from the parent workspace: this crate needs a nightly toolchain
# (libFuzzer), so `cargo build --workspace` and the CI matrix never touch it.
# Run it on demand with: `cargo +nightly fuzz run token_from_bytes`.
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
eat-pass-core = { path = ".." }

[[bin]]
name = "token_from_bytes"
path = "fuzz_targets/token_from_bytes.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_authorization"
path = "fuzz_targets/parse_authorization.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1
