[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eatpass-desktop"
version = "0.1.0"
description = "eat-pass coupled mint SDK for Linux and Windows desktop agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["."]
include = ["eatpass_desktop*"]
